@@ -18,7 +18,7 @@ class TheTVDBProvider(AbstractProvider):
     apikey = '8357F01B3F8F1393'
     apiurl = 'https://api.thetvdb.com/series/%s/images/query'
     loginurl = 'https://api.thetvdb.com/login'
-    imageurl_base = 'http://thetvdb.com/banners/'
+    imageurl_base = 'https://thetvdb.com/banners/'
 
     artmap = {'fanart': 'fanart', 'poster': 'poster', 'season': mediatypes.SEASON + '.%s.poster',
         'seasonwide': mediatypes.SEASON + '.%s.banner', 'series': 'banner'}
